--- a/RankOrderAssignment.ipynb
+++ b/RankOrderAssignment.ipynb
@@ -57,6 +57,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "bab879c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from HungarianAlgorithm import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "416da0dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "581057ed",
    "metadata": {},
@@ -148,11 +166,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "a6866a78",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 1), (1, 0), (2, 6), (3, 2), (4, 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = hungarian_algorithm(preference)\n",
+    "sorted_by_second = sorted(result, key=lambda tup: tup[0])\n",
+    "print(sorted_by_second)"
+   ]
   },
   {
    "cell_type": "code",
