--- a/RankOrderAssignment.ipynb
+++ b/RankOrderAssignment.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "b86978f9",
    "metadata": {},
    "outputs": [],
@@ -58,18 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "bab879c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from HungarianAlgorithm import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "416da0dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -83,8 +73,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "86d1dcf8",
+   "metadata": {},
+   "source": [
+    "Here is a example:\n",
+    "* Assuming each patient has a unqiue preference to each doctor\n",
+    "* doctors_capacity indicates each doctor's max capacity for patients\n",
+    "* preference contains each patient's preference for doctor\n",
+    "* 0 is the max preference, len(doctors_capacity)-1 is the least preference"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "db1bc652",
    "metadata": {
     "scrolled": true
@@ -104,8 +106,46 @@
    ],
    "source": [
     "doctors_capacity = [2, 3, 1, 5]\n",
+    "doc_name2id = {0:\"A\", 1:\"B\", 2:\"C\", 3:\"D\"}\n",
+    "#rank from 0-3 high to low\n",
     "preference = np.array([[0, 1, 2, 3], [0, 3, 1, 2], [1, 3, 2, 0], [3, 1, 0, 2], [3, 2, 0, 1]])\n",
     "print(preference)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "978b052e",
+   "metadata": {},
+   "source": [
+    "## Print preference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d3ac15ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For patient 0, his or her preference is A>B>C>D\n",
+      "For patient 1, his or her preference is A>D>B>C\n",
+      "For patient 2, his or her preference is B>D>C>A\n",
+      "For patient 3, his or her preference is D>B>A>C\n",
+      "For patient 4, his or her preference is D>C>A>B\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(preference)):\n",
+    "    pref_each = preference[i]\n",
+    "    pref_name = []\n",
+    "    for j in pref_each:\n",
+    "        pref_name.append(doc_name2id.get(j))\n",
+    "    pref_name_list = '>'.join(pref_name)\n",
+    "    print(\"For patient %d, his or her preference is %s\" % (i, pref_name_list))"
    ]
   },
   {
@@ -117,8 +157,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df307ad7",
+   "metadata": {},
+   "source": [
+    "Our program uses hungarian algorithm to achieve matching. One issue that Hungarian algorithm could not achieve is that it could not handle multiple capacity. In order to fix this issue, we multiple the columns with each corresponding capacity. For instance, if a doctor has 4 capacity, we make him 4 columns."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "1fc37935",
    "metadata": {},
    "outputs": [],
@@ -136,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "02ff9f33",
    "metadata": {},
    "outputs": [
@@ -165,8 +213,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8fe1e56",
+   "metadata": {},
+   "source": [
+    "* Here we will run Hungarian algorithm coded in the HungarianAlgorithm.py"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
+   "id": "5855c9c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from HungarianAlgorithm import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "a6866a78",
    "metadata": {},
    "outputs": [
@@ -186,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "8a081875",
    "metadata": {},
    "outputs": [
@@ -207,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "baa85951",
    "metadata": {},
    "outputs": [
@@ -225,6 +291,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "52f4b860",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'A', 1: 'A', 2: 'D', 3: 'B', 4: 'C'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = {}\n",
+    "for patient_idx in range(len(sorted_by_second)):\n",
+    "    doctor_idx = sorted_by_second[patient_idx][1]\n",
+    "    j = 0\n",
+    "    while j < len(doctors_range) and doctor_idx >= doctors_range[j]:\n",
+    "        j+=1\n",
+    "    result[patient_idx] = doc_name2id.get(j)\n",
+    "print(result)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f114bd16",
    "metadata": {},
@@ -234,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "45110cac",
    "metadata": {},
    "outputs": [
@@ -242,11 +333,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "patient 0 is taken care by doctor 0\n",
-      "patient 1 is taken care by doctor 0\n",
-      "patient 2 is taken care by doctor 3\n",
-      "patient 3 is taken care by doctor 1\n",
-      "patient 4 is taken care by doctor 2\n"
+      "patient 0 is taken care by doctor A\n",
+      "patient 1 is taken care by doctor A\n",
+      "patient 2 is taken care by doctor D\n",
+      "patient 3 is taken care by doctor B\n",
+      "patient 4 is taken care by doctor C\n"
      ]
     }
    ],
@@ -256,35 +347,64 @@
     "    j = 0\n",
     "    while j < len(doctors_range) and doctor_idx >= doctors_range[j]:\n",
     "        j+=1\n",
-    "    print(\"patient {} is taken care by doctor {}\".format(str(patient_idx), str(j)))\n",
-    "        "
+    "    print(\"patient {} is taken care by doctor {}\".format(str(patient_idx), doc_name2id.get(j)))\n",
+    "       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "id": "ba849cbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doctor A takes care of patients [0, 1]\n",
+      "doctor D takes care of patients [2]\n",
+      "doctor B takes care of patients [3]\n",
+      "doctor C takes care of patients [4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "doctors_to_patients = {}\n",
+    "for patient in result.keys():\n",
+    "    doctor = result[patient]\n",
+    "    if doctor not in doctors_to_patients.keys():\n",
+    "        doctors_to_patients[doctor] = []\n",
+    "    doctors_to_patients[doctor].append(patient)\n",
+    "\n",
+    "for doctor in doctors_to_patients.keys():\n",
+    "    print(\"doctor {} takes care of patients {}\".format(doctor, str(doctors_to_patients[doctor])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0d5cf708",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0'"
+       "dict_values(['A', 'B', 'C', 'D'])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "str(0)"
+    "doc_name2id.values()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d5cf708",
+   "id": "eaffffeb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -320,6 +440,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "145601843f4ec791e8197759dfe3129248f94872773916947b5efa0d16dbd392"
+   }
   }
  },
  "nbformat": 4,
